--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </div>
 
     <div class="profile-card__cnt js-profile-cnt">
-      <div class="profile-card__name">Sandra Hidalgo</div>
-      <div class="profile-card__txt">Administrador de <strong>C&L Apartments</strong></div>
+      <div class="profile-card__name">Sandra Hidalgo & Lola Vazquez</div>
+      <div class="profile-card__txt">Administradoras de <strong>C&L Apartments</strong></div>
       <div class="profile-card-loc">
         <span class="profile-card-loc__icon">
           <svg class="icon"><use xlink:href="#icon-location"></use></svg>
