--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     </div>
 
     <div class="profile-card__cnt js-profile-cnt">
-      <div class="profile-card__name">Sandra Hidalgo & Lola Vazquez</div>
+      <div class="profile-card__name">Sandra Hidalgo</div>
+      <div class="profile-card__name">&</div>
+      <div class="profile-card__name">Lola Vazquez</div>
       <div class="profile-card__txt">Administradoras de <strong>C&L Apartments</strong></div>
       <div class="profile-card-loc">
         <span class="profile-card-loc__icon">
